fix tooltip and zoom overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ html {
 main {
   max-height: 500px;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 h1,
